--- a/views/components/product.ejs
+++ b/views/components/product.ejs
@@ -4,7 +4,7 @@
     </div>
     <div class="ProductName"><strong><%= product.title %></strong></div>
     <div class="ProductCartDetails">
-        <div class="ProductPrice">&#8369; <%= product.price %>.00</div>
+        <div class="ProductPrice">&#x24; <%= product.price %>.00</div>
         <div class="ProductRating"><%= product.rating %> % Ratings</div>
         <div class="CartButCon">
                 <div class="CartBut"><center><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true">Add to cart</span></center></div>
