--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
               <button type="submit" class="btn btn-primary LogInBut">LOG IN</button>
             </div>
             <div class="form-check mb-3 LogInput" style="text-align: center;">
-                  <p class="RegisterHere">Don't have an account?</p><a href="/signup">Sign Up</a>
+                  <p class="RegisterHere">Don't have an account?</p><a href="/routes/signup">Sign Up</a>
             </div>
       </form>
     </div>
